# avme-wallet

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VERSION
.github/ISSUE_TEMPLATE/: bug_report.md  todo_request.md
cmake/: DarwinArmLibraries.cmake  DarwinLibraries.cmake  LinuxLibraries.cmake  ProjectBip3x.cmake  ProjectEthash.cmake  ProjectLevelDB.cmake  ProjectLibFF.cmake  ProjectLibLedgerCore.cmake  ProjectLibmd4c.cmake  ProjectSecp256k1.cmake  ProjectSnappy.cmake  ProjectToolbox.cmake  WindowsLibraries.cmake  arm-apple-darwin21.cmake  bip3x_strings_fix.patch  libmd4c_no_md2html.patch  toolbox_limit.patch  x86_64-apple-darwin20.cmake  x86_64-w64-mingw32.cmake
cmake/Hunter/: config.cmake  x86_64-apple-darwin20.cmake
cmake/secp256k1/: CMakeLists.txt
depends/: LICENSE  README.md
depends/patches/qt/: fix_fxc_mingw.patch  fix_limits_header.patch  openssl-qt-crosscompile.patch
depends/patches/xcb_proto/: xcbproto_python.patch
lib/devcore/: Address.cpp  Assertions.h  Base64.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.cpp  Guards.h  Log.cpp  Log.h  LoggingProgramOptions.h  RLP.cpp  RLP.h  SHA3.cpp  SHA3.h  StateCacheDB.cpp  StateCacheDB.h  Terminal.h  TrieCommon.cpp  TrieCommon.h  TrieDB.h  TrieHash.cpp  TrieHash.h  vector_ref.h
lib/devcrypto/: AES.cpp  AES.h  Blake2.cpp  Blake2.h  CMakeLists.txt  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  Exceptions.h  Hash.cpp  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h
lib/ethcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  EVMSchedule.cpp  EVMSchedule.h  Exceptions.h  KeyManager.cpp  KeyManager.h  Precompiled.cpp  Precompiled.h  TransactionBase.cpp  TransactionBase.h
lib/json_spirit/: JsonSpiritHeaders.h  json_spirit_error_position.h  json_spirit_reader_template.h  json_spirit_value.h  json_spirit_writer_template.h
libdevcore/: CMakeLists.txt  Common.cpp  Common.h  FileSystem.cpp  FixedHash.h  StateCacheDB.h
libdevcrypto/: CMakeLists.txt  LibSnark.cpp  SecretStore.cpp  SecretStore.h
libethcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  Common.cpp  Common.h  KeyManager.cpp  Precompiled.cpp  TransactionBase.cpp  TransactionBase.h
libledger/: CMakeLists.txt  comms.cpp  comms.h  encoding.cpp  encoding.h  ledger.cpp  ledger.h
src/: .main-gui.h.kate-swp  avme-wallet.cpp  avme-wallet.h  main-cli.cpp  main-cli.h  main-gui.cpp  main-gui.h  main.cpp  moc_main-gui.cpp  network.cpp  network.h  qml.qrc  version.h.in  winico.rc
src/core/: ABI.cpp  ABI.h  Account.h  BIP39.cpp  BIP39.h  Cipher.cpp  Cipher.h  Database.cpp  Database.h  JSON.cpp  JSON.h  Utils.cpp  Utils.h  Wallet.cpp  Wallet.h
src/img/icons/: LICENSE
src/lib/: API.cpp  API.h  Account.cpp  Account.h  BIP39.cpp  BIP39.h  Cipher.cpp  Cipher.h  Graph.cpp  Graph.h  JSON.cpp  JSON.h  Network.cpp  Network.h  Pangolin.cpp  Pangolin.h  Staking.cpp  Staking.h  Utils.cpp  Utils.h  Wallet.cpp  Wallet.h  abi.cpp  abi.h  json.cpp  json.h  network.cpp  network.h  root_certificates.hpp  storage.cpp  storage.h  transactions.cpp  transactions.h  wallet.cpp  wallet.h
src/lib/devcore/: Common.cpp  Common.h  CommonIO.cpp  FileSystem.h  FixedHash.h  StateCacheDB.cpp  TrieDB.h  TrieHash.h
src/lib/devcrypto/: Blake2.cpp  Blake2.h  CMakeLists.txt  Common.cpp  Common.h  CryptoPP.cpp  Exceptions.h  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h
src/lib/ethcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  EVMSchedule.cpp  EVMSchedule.h  Exceptions.h  KeyManager.cpp  KeyManager.h  Precompiled.cpp  Precompiled.h  TransactionBase.cpp  TransactionBase.h
src/lib/ledger/: comms.cpp  comms.h  encoding.cpp  encoding.h  ledger.cpp  ledger.h
src/network/: API.cpp  API.h  Graph.cpp  Graph.h  Pangolin.cpp  Pangolin.h  ParaSwap.cpp  ParaSwap.h  Server.cpp  Server.h  Staking.cpp  Staking.h
src/qml/components/: AVMEAccountHeader.qml  AVMEAccountQRCode.qml  AVMEAccountSeedList.qml  AVMEAppGrid.qml  AVMEAppList.qml  AVMEAssetCombobox.qml  AVMEAsyncImage.qml  AVMEButton.qml  AVMECheckbox.qml  AVMECoinList.qml  AVMECombobox.qml  AVMEContactsList.qml  AVMEContactsPopupList.qml  AVMEInput.qml  AVMEMenu.qml  AVMEOverviewAssetList.qml  AVMEOverviewBalance.qml  AVMEOverviewPieChart.qml  AVMEPanel.qml  AVMEPopup.qml  AVMEPopupAbout.qml  AVMEPopupAccountData.qml  AVMEPopupApprove.qml  AVMEPopupApproveExchange.qml  AVMEPopupChooseAccount.qml  AVMEPopupConfirmAddLP.qml  AVMEPopupConfirmExchange.qml  AVMEPopupConfirmHarvest.qml  AVMEPopupConfirmRemoveLP.qml  AVMEPopupConfirmStake.qml  AVMEPopupConfirmTx.qml  AVMEPopupImportAccount.qml  AVMEPopupImportSeed.qml  AVMEPopupInfo.qml  AVMEPopupLedger.qml  AVMEPopupNewAccount.qml  AVMEPopupNewWalletSeed.qml  AVMEPopupTxProgress.qml  AVMEPopupViewPrivKey.qml  AVMEPopupViewSeed.qml  (+8 more)
src/qml/panels/: AVMEPanelAccountSelect.qml  AVMEPanelAddLiquidity.qml  AVMEPanelAppDetails.qml  AVMEPanelApps.qml  AVMEPanelCompound.qml  AVMEPanelCompoundRewards.qml  AVMEPanelCreateWallet.qml  AVMEPanelExchange.qml  AVMEPanelLoadWallet.qml  AVMEPanelOverview.qml  AVMEPanelOverviewAssets.qml  AVMEPanelRemoveLiquidity.qml  AVMEPanelSend.qml  AVMEPanelStaking.qml  AVMEPanelStakingRewards.qml  AVMEPanelTokenDetails.qml  AVMEPanelTokens.qml
src/qml/popups/: AVMEPopupAppSelect.qml  AVMEPopupAssetSelect.qml  AVMEPopupChooseAccount.qml  AVMEPopupConfirmSign.qml  AVMEPopupConfirmTx.qml  AVMEPopupContactSelect.qml  AVMEPopupCreateWallet.qml  AVMEPopupCustomPath.qml  (+17 more)
src/qmlwrap/: QmlAccount.cpp  QmlAccount.h  QmlApi.cpp  QmlApi.h  QmlApps.cpp  QmlContacts.cpp  QmlExchange.cpp  QmlExchange.h  QmlHistory.cpp  QmlHistory.h  QmlOverview.cpp  QmlOverview.h  QmlSend.cpp  QmlSend.h  QmlServer.cpp  QmlStaking.cpp  QmlStaking.h  QmlSystem.cpp  QmlSystem.h  QmlTokens.cpp  QmlWallet.cpp  QmlWallet.h
(+35 files in other folders)
